app/client/status.css
#status {
  min-width: 1000px;
}

.status-tab .lot-row {
  padding-left: 5em !important;
}

.status-tab .ui.pagination.menu {
  border: none;
  box-shadow: none;
  background-color: rgb(249, 250, 251);
}

.status-tab .ui.menu .item:before {
  width: 0;
}

.status-tab .ui.pagination.menu .active.item {
  background-color: rgba(29, 62, 102, 0.5);
  border-radius: 50%;
}

.status-tab td span {
  font-size: 12px;
}

.status-tab i.trash.alternate, td.caret, i.info {
  cursor: pointer;
}

.status-tab table table td.icons {
  text-align: right;
}

.status-tab div.warning-div {
  color: rgb(87, 58, 8, 0.87);
  cursor: pointer;
  text-decoration: underline;
  padding: 1em 0;
  width: fit-content;
}

.status-tab div.controls {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.status-tab div.controls span {
  color: #21ba45;
  cursor: pointer;
  text-decoration: underline;
}

.status-tab div.controls .ui.input {
  width: 50%;
}

.status-tab div.filters {
  margin-top: 1em;
  display: flex;
  column-gap: 1em;
}

.status-tab div.filters > * {
  flex: 1 1 0;
}

.status-tab div.filters > * {
  background-color: #1D3E66;
  color: white;
  font-weight: 700;
  padding: 0.5em;
  border-radius: 0.5em;
}

.status-tab div.filters > * > div {
  padding-left: 0.25em;
}

.status-tab div.filters > * > .ui.search.dropdown > input.search {
  min-width: 5em; /* temp. fix to squashing */
  color: white;
}

#status .ui.tabular.menu {
  padding-right: 25%;
}

#status .ui.tabular.menu .item {
  flex: 1 1 0;
  justify-content: center;
}

@media screen and (max-width: 1024px) {
  .status-wrapped {
    width: 100%;
    position: relative;
    overflow: auto;
  }

  #status .ui.attached.tabular.menu .item {
    flex: 0 0 0;
  }

}

